--- a/app/views/pinCard.html
+++ b/app/views/pinCard.html
@@ -2,12 +2,12 @@
     <img class="card-img-top img-fluid" src={{pinItem.imageUrl}} alt="Card image cap" >
     <div class="card-block ">
          <h4 class="card-title">{{pinItem.name}}</h4>
-         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text">{{pinItem.text}}</p>
+         <p class="card-text"><small class="text-muted">Last updated {{pinItem.min}} mins ago</small></p>
          <button class="btn btn-danger save-pin-button">Save pin</button>
          <div class="btn-group share-like-group">
-              <button class="btn btn-danger icon-share">S</button>
-              <button class="btn btn-danger icon-like">L</button>
+              <button class="btn btn-danger icon-share">Share</button>
+              <button class="btn btn-danger icon-like">Like</button>
          </div>
          <div class="media">
                 <div class="media-left">
@@ -16,8 +16,8 @@
                    </a>
                 </div>
                 <div class="media-body">
-                    <h6 class="media-heading">Top aligned media</h6>
-                    <p>Cras sit amet nibh libero, in gra</p>
+                    <h6 class="media-heading"><strong>{{pinItem.user}} </strong></h6>
+                    <p>{{pinItem.userInfo}}</p>
                 </div>
          </div>
     </div>           
