git push -u origin master

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -2,7 +2,7 @@
         <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header" aria-expanded="false" aria-label="Toggle navigation"></button>
         <div class="collapse navbar-toggleable-xs" id="navbar-header">
             <div class="col-md-1">
-              <a class="navbar-brand" href="#">Pinterest</a>
+              <a class="navbar-brand" href="#"><img src="./assets/pinterest_logo.png" width="40px" height= "40px"/></a>
             </div>
             <div class="col-md-9 ">
                 <form class="form-inline ">
