--- a/app/views/header.html
+++ b/app/views/header.html
@@ -5,11 +5,11 @@
               <a class="navbar-brand" href="#"><img src="./assets/pinterest_logo.png" width="40px" height= "40px"/></a>
             </div>
             <div class="col-md-9 ">
-                <form class="form-inline ">
-                <input class="form-control full-width" type="text" placeholder="Search">
+                <form class="form-inline form-search">
+                <input class="form-control full-width search-query" type="text" placeholder="Search">
                 </form>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2" id="menu">
                 <img src="./assets/hamburger-menu.png" width="30px" height="30px"/>
                 <img src="./assets/profile_icon.png" width="30px" height="30px"/>
                 <img src="./assets/notifications.png" width="30px" height="30px"/>
