--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css");
 .full-width{
 
     width:100% !important;
@@ -5,6 +6,32 @@
 .pos-rel{
  position:relative;
 }
+
+input.search-query {
+    padding-left:26px;
+}
+
+form.form-search {
+    position: relative;
+    padding-top:15px
+}
+form.form-search:before {
+    display: block;
+    width: 14px;
+    height: 14px;
+    content: "\e003";
+    font-family: 'Glyphicons Halflings';
+    background-position: -48px 0;
+    position: absolute;
+    top:23px;
+    left:8px;
+    opacity: .5;
+    z-index: 1000;
+}
+#menu{
+    padding-top: 15px;
+}
+
 .save-pin-button, .share-like-group{
     display: none;
 }
@@ -29,3 +56,60 @@
 
 }
 
+.footer p {
+	margin: 0;
+}
+
+.footer ul {
+	font-size: 13px;
+	list-style-type: none;
+	margin-left: 0;
+	padding-left: 0;
+	color: #7F8C8D;
+
+}
+.footer ul li a {
+	padding: 0 0 5px 0;
+	display: block;
+}
+
+.social li {
+	background: none repeat scroll 0 0 #B5B5B5;
+	border: 2px solid #B5B5B5;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-o-border-radius: 50%;
+	-ms-border-radius: 50%;
+	border-radius: 50%;
+	float: left;
+	height: 36px;
+	line-height: 36px;
+	margin: 0 8px 0 0;
+	padding: 0;
+	text-align: center;
+	width: 36px;
+	transition: all 0.5s ease 0s;
+	-moz-transition: all 0.5s ease 0s;
+	-webkit-transition: all 0.5s ease 0s;
+	-ms-transition: all 0.5s ease 0s;
+	-o-transition: all 0.5s ease 0s;
+}
+.social li:hover {
+	transform: scale(1.15) rotate(360deg);
+	-webkit-transform: scale(1.1) rotate(360deg);
+	-moz-transform: scale(1.1) rotate(360deg);
+	-ms-transform: scale(1.1) rotate(360deg);
+	-o-transform: scale(1.1) rotate(360deg);
+}
+.social li a {
+	color: #EDEFF1;
+}
+.social li:hover {
+	border: 2px solid #d9534f;
+	background: #d9534f;
+}
+.social li a i {
+	font-size: 150%;
+	margin: 5px 5px 5px 5px;
+	color: #EDEFF1 !important;
+}
