--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,8 +1,6 @@
-  <footer>
-    
-    <nav class="navbar navbar-light bg-faded navbar-fixed-bottom" role="navigation">
+<nav class="navbar navbar-light bg-faded navbar-fixed-bottom" role="navigation">
       <div class ="container">
-        <div class="footer" id="footer">
+        <div class="footer">
           <p class="navbar-text">&copy; Copyright Niko & Meri 2016. All rights reserved.</p>
             <div class="pull-right">
                     <ul class="social">
@@ -16,6 +14,4 @@
           </div>  
         </div>
       </div>
-    </nav>
-
-  </footer>
+</nav>
