--- a/app/views/pinCard.html
+++ b/app/views/pinCard.html
@@ -6,7 +6,7 @@
          <p class="card-text"><small class="text-muted">Last updated {{pinItem.min}} mins ago</small></p>
          <button class="btn btn-danger save-pin-button">Save pin</button>
          <div class="btn-group share-like-group">
-              <button class="btn btn-danger icon-share">Share</button>
+              
               <button class="btn btn-danger icon-like">Like</button>
          </div>
          <div class="media">
@@ -18,6 +18,7 @@
                 <div class="media-body">
                     <h6 class="media-heading"><strong>{{pinItem.user}} </strong></h6>
                     <p>{{pinItem.userInfo}}</p>
+                    <button class="btn btn-danger icon-comment">Comment</button>
                 </div>
          </div>
     </div>           
