--- a/app/views/profilePins.html
+++ b/app/views/profilePins.html
@@ -1,4 +1,4 @@
- <div class="card pos-rel">
+ <div style=" max-width:275px"class="card pos-rel">
     <img class="card-img-top img-fluid" src={{pinItem.imageUrl}} alt="Card image cap" >
     <div class="card-block ">
          <h4 class="card-title">{{pinItem.name}}</h4>
