--- a/app/views/header.html
+++ b/app/views/header.html
@@ -9,7 +9,9 @@
             </div>
             <div class="col-md-9 ">
                 <form class="form-inline form-search">
-                <input class="form-control full-width search-query" type="text" placeholder="Search">
+                <input
+                 (keyup)="handleSearchInputNewValue($event.target.value)" class="form-control full-width search-query" type="text" placeholder="Search">
+                
                 </form>
             </div>
             <div class="col-md-2" id="menu">
