--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,8 +1,12 @@
- <div class="container">
+<my-header (filteringPins)=onFilterPins($event)></my-header>
+<div class="container">
+     
+  
         <div class="card-group">
-            <div *ngFor="let item of pinItems" class="card">
-                <pin-card [pinItem]="item"></pin-card>
+            <div  *ngFor="let item of pinItems | filterPins:searchValueToSendToHome" class="col-md-3">
+                <div class="card">
+                    <pin-card [isProfilePage]="false" [pinItem]="item"></pin-card>
+                </div> 
             </div>
-            
         </div>  
-    </div>
+</div>
