--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,6 +1,8 @@
+<my-header (filteringPins)=onFilterPins($event)></my-header>
+
 <div>
   <template ngbModalContainer ></template>
-  <template  #content let-c="close" let-d="dismiss">
+  <template  #loginModal let-c="close" let-d="dismiss">
     <div class="modal-header">
       <h4 class="modal-title">Prijava</h4>
       <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
@@ -25,8 +27,9 @@
     <div class="modal-footer">
     </div>
   </template>
-  <button style="margin-left:140px" class="btn btn-lg btn-outline-primary" (click)="open(content)">Login</button>
+  <button style="margin-left:140px" class="btn btn-lg btn-outline-primary" (click)="open(loginModal)">Login</button>
 </div>
+
 
 
 <div>
@@ -35,7 +38,7 @@
   </h2>
 
   <template ngbModalContainer ></template>
-  <template  #content let-c="close" let-d="dismiss">
+  <template  #pinModal let-c="close" let-d="dismiss">
     <div class="modal-header">
       <h4 class="modal-title">Dodaj pin</h4>
       <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
@@ -71,13 +74,15 @@
     </div>
   </template>
 
-  <button style="margin-left:140px" class="btn btn-lg btn-outline-primary" (click)="open(content)">Dodaj pin</button>
+  <button style="margin-left:140px" class="btn btn-lg btn-outline-primary" (click)="open(pinModal)">Dodaj pin</button>
 
  <div class="container">
 
         <div class="card-group">
-            <div *ngFor="let item of pinItems" class="card">
-                <pin-card-2 [pinItem]="item"></pin-card-2>
+            <div *ngFor="let item of pinItems  | filterPins:searchValueToSendToHome" class="col-md-3">
+                <div class="card">
+                  <pin-card isProfilePage="true" [pinItem]="item"></pin-card>
+                </div>
             </div>
             
         </div>  
