--- a/app/views/pinCard.html
+++ b/app/views/pinCard.html
@@ -28,7 +28,10 @@
                 <button *ngIf="pinItem.isPinned && !isProfilePage" class="btn btn-danger save-pin-button">Saved</button>
          <div class="btn-group share-like-group">
               
-              <button class="btn btn-danger icon-like">Like</button>
+              <button class="btn btn-danger icon-like"  *ngIf="!pinItem.isLike" (click)="onLike(pinItem)">Like</button>
+              <button class="btn btn-danger icon-like"  *ngIf="pinItem.isLike" (click)="onLiked(pinItem)">Liked
+                  <img class="media-object" src="./assets/heart.png" width="40px" height="40px">  
+              </button>
          </div>
          <div class="media">
                 <div class="media-left">
