--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -12,13 +12,13 @@
         <div class="modal-body">
             <form [formGroup]= "loginForm" (ngSubmit)="login($event,$valid)">
                     <div class="form-group">
-                        <label for="formGroupExampleInput">Korisničko ime:</label>
+                        <label for="formGroupExampleInput">Korisničko ime</label>
                         <input formControlName="korisnickoime" type="text" class="form-control" id="formGroupExampleInput" placeholder="Korisnicko ime"/>
                     
                     </div>
                     <div class="form-group">
-                        <label for="formGroupExampleInput2">Lozinka:</label>
-                        <input  formControlName="lozinka" type="text" class="form-control" id="formGroupExampleInput2" placeholder="Lozinka"/>
+                        <label for="formGroupExampleInput2">Lozinka</label>
+                        <input  formControlName="lozinka" type="password" class="form-control" id="formGroupExampleInput2" placeholder="Lozinka"/>
                     </div>
                     <button type="submit" class="btn btn-primary" >Submit</button>
             
@@ -30,11 +30,14 @@
 </div>
 
 
-<div>
-    <h2 id="profileName">Niko
+
+   <h2 id="profileName">{{loginUsername}}
         <img src="assets/avatar(1).png" height="80px" width="80px" class="rounded-circle">
     </h2>
 
+
+
+<div>
     <template ngbModalContainer ></template>
     <template  #pinModal let-c="close" let-d="dismiss">
             <div class="modal-header">
